bootstrap react app

--- a/package.json
+++ b/package.json
@@ -1,33 +1,16 @@
 {
   "name": "basketball-stats",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "rollup": "rollup -c -w",
-    "server": "cd public && python -m http.server"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/Caged/basketball-stats.git"
-  },
-  "author": "Justin Palmer",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/Caged/basketball-stats/issues"
-  },
-  "homepage": "https://github.com/Caged/basketball-stats#readme",
+  "version": "0.1.0",
+  "private": true,
   "dependencies": {
-    "d3": "^4.12.2",
-    "three": "^0.89.0",
-    "three-trackballcontrols": "0.0.7"
+    "react": "^16.2.0",
+    "react-dom": "^16.2.0",
+    "react-scripts": "1.1.0"
   },
-  "devDependencies": {
-    "babel-core": "^6.26.0",
-    "rollup": "^0.54.1",
-    "rollup-plugin-babel": "^3.0.3",
-    "rollup-plugin-commonjs": "^8.2.6",
-    "rollup-plugin-node-resolve": "^3.0.2",
-    "rollup-plugin-uglify": "^3.0.0"
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test --env=jsdom",
+    "eject": "react-scripts eject"
   }
 }
