throttle range events

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "d3": "^4.12.2",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
-    "react-scripts": "1.1.0"
+    "react-scripts": "1.1.0",
+    "throttle-debounce": "^1.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
